--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
-Package: hello-LloydJonesIII
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Package: hello
+Title: Hello World
+Version: 1.0
+Authors@R: LloydJonesIII
+    person("Lloyd", "Jones","Winston" , email = "lwj1@hood.edu", role = c("LWJ", "LWJ"))
+Description: The 'hello' function greats the inputed user.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
